Port to new kcmutils_add_qml_kcm function
We can now load the QML files as QRC. This way they are embedded in the
plugin, which will simplify testing and the installation.

Depends on https://invent.kde.org/frameworks/kcmutils/-/merge_requests/133

--- a/kcms/componentchooser/CMakeLists.txt
+++ b/kcms/componentchooser/CMakeLists.txt
@@ -22,8 +22,7 @@ set(componentchooser_SRCS
 kconfig_add_kcfg_files(componentchooser_SRCS browser_settings.kcfgc GENERATE_MOC)
 kconfig_add_kcfg_files(componentchooser_SRCS terminal_settings.kcfgc GENERATE_MOC)
 
-kcoreaddons_add_plugin(kcm_componentchooser SOURCES ${componentchooser_SRCS} INSTALL_NAMESPACE "plasma/kcms/systemsettings")
-kcmutils_generate_desktop_file(kcm_componentchooser)
+kcmutils_add_qml_kcm(kcm_componentchooser SOURCES ${componentchooser_SRCS})
 
 target_link_libraries(kcm_componentchooser
     Qt::Core
