--- a/kcms/icons/CMakeLists.txt
+++ b/kcms/icons/CMakeLists.txt
@@ -25,11 +25,8 @@ target_link_libraries(kcm_icons
 
 file(GENERATE OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/config.h CONTENT "#define CMAKE_INSTALL_FULL_LIBEXECDIR \"${CMAKE_INSTALL_FULL_LIBEXECDIR}\"")
 
-set(changeicons_SRCS changeicons.cpp iconssettings.cpp)
-
-kconfig_add_kcfg_files(changeicons_SRCS iconssettingsbase.kcfgc GENERATE_MOC)
-
-add_executable(plasma-changeicons ${changeicons_SRCS})
+add_executable(plasma-changeicons changeicons.cpp iconssettings.cpp)
+kconfig_add_kcfg_files(plasma-changeicons iconssettingsbase.kcfgc GENERATE_MOC)
 target_link_libraries(plasma-changeicons PRIVATE Qt::Core KF6::KIOWidgets KF6::KCMUtils KF6::IconThemes KF6::I18n)
 
 ecm_qt_declare_logging_category(plasma-changeicons
