--- a/kcms/style/CMakeLists.txt
+++ b/kcms/style/CMakeLists.txt
@@ -1,9 +1,12 @@
 # KI18N Translation Domain for this library
 add_definitions(-DTRANSLATION_DOMAIN=\"kcm_style\")
 
-########### next target ###############
+kcmutils_add_qml_kcm(kcm_style)
 
-set(kcm_style_PART_SRCS
+qt_add_dbus_interface(kcm_style_DBUS_SRCS ${KDED_DBUS_INTERFACE} kded_interface)
+qt_add_dbus_interface(kcm_style_DBUS_SRCS org.kde.GtkConfig.xml kdegtkconfig_interface)
+target_sources(kcm_style PRIVATE
+    ${kcm_style_DBUS_SRCS}
     ../kcms-common.cpp
     styleconfdialog.cpp
     kcmstyle.cpp
@@ -20,25 +23,21 @@ set(kcm_style_PART_SRCS
     previewitem.h
     styledata.h
 )
-qt_add_dbus_interface(kcm_style_PART_SRCS ${KDED_DBUS_INTERFACE} kded_interface)
-qt_add_dbus_interface(kcm_style_PART_SRCS org.kde.GtkConfig.xml kdegtkconfig_interface)
-
-kcmutils_generate_module_data(
-    kcm_style_PART_SRCS
+kcmutils_generate_module_data(kcm_style
     MODULE_DATA_HEADER styledata.h
     MODULE_DATA_CLASS_NAME StyleData
     SETTINGS_HEADERS stylesettings.h
     SETTINGS_CLASSES StyleSettings
 )
-
-ki18n_wrap_ui(kcm_style_PART_SRCS stylepreview.ui)
-
-kconfig_add_kcfg_files(kcm_style_PART_SRCS stylesettings.kcfgc GENERATE_MOC)
-
-kcmutils_add_qml_kcm(kcm_style SOURCES ${kcm_style_PART_SRCS})
+ki18n_wrap_ui(kcm_style stylepreview.ui)
+kconfig_add_kcfg_files(kcm_style stylesettings.kcfgc GENERATE_MOC)
+ecm_qt_declare_logging_category(kcm_style
+    HEADER kcm_style_debug.h
+    IDENTIFIER KCM_STYLE_DEBUG
+    CATEGORY_NAME org.kde.plasma.kcm_style
+)
 
 target_compile_definitions(kcm_style PUBLIC CMAKE_INSTALL_FULL_LIBEXECDIR="${CMAKE_INSTALL_FULL_LIBEXECDIR}")
-
 target_link_libraries(kcm_style
     Qt::Quick
     KF6::KCMUtils
@@ -49,12 +48,6 @@ target_link_libraries(kcm_style
     KF6::NewStuffCore
     KF6::XmlGui
     krdb
-)
-
-ecm_qt_declare_logging_category(kcm_style
-    HEADER kcm_style_debug.h
-    IDENTIFIER KCM_STYLE_DEBUG
-    CATEGORY_NAME org.kde.plasma.kcm_style
 )
 
 install(FILES stylesettings.kcfg DESTINATION ${KDE_INSTALL_KCFGDIR})
