kcms: Clean up some futher Qt5 leftovers

--- a/kcms/fonts/CMakeLists.txt
+++ b/kcms/fonts/CMakeLists.txt
@@ -9,12 +9,7 @@ target_link_libraries(kcm_fonts_static Qt::Core Qt::Xml KF6::I18n KF6::WindowSys
 set_property(TARGET kcm_fonts_static PROPERTY POSITION_INDEPENDENT_CODE ON)
 
 if(HAVE_X11)
-    target_link_libraries(kcm_fonts_static X11::X11 X11::Xft XCB::IMAGE)
-    if (QT_MAJOR_VERSION EQUAL "5")
-        target_link_libraries(kcm_fonts_static Qt::X11Extras)
-    else()
-        target_link_libraries(kcm_fonts_static Qt::GuiPrivate)
-    endif()
+    target_link_libraries(kcm_fonts_static X11::X11 X11::Xft XCB::IMAGE Qt::GuiPrivate)
 endif()
 
 kcmutils_add_qml_kcm(kcm_fonts)
