--- a/kcms/kfontinst/kio/CMakeLists.txt
+++ b/kcms/kfontinst/kio/CMakeLists.txt
@@ -4,13 +4,8 @@ ecm_qt_declare_logging_category(kio_fonts_PART_SRCS
     IDENTIFIER KCM_KFONTINST_KIO
     CATEGORY_NAME org.kde.kcm_kfontinst.kio)
 # qt_add_dbus_interface(kio_fonts_PART_SRCS ../dbus/org.kde.fontinst.xml FontinstIface)
-kcoreaddons_add_plugin(kio_fonts SOURCES ${kio_fonts_PART_SRCS} ${KFI_FONTINST_AUTH_SRC} INSTALL_NAMESPACE "kf${QT_MAJOR_VERSION}/kio")
-target_link_libraries(kio_fonts Qt::DBus Qt::Xml KF6::Archive KF6::KIOCore KF6::KIOWidgets kfontinst )
-if (QT_MAJOR_VERSION EQUAL "5")
-    target_link_libraries(kio_fonts Qt::X11Extras)
-else()
-    target_link_libraries(kio_fonts Qt::GuiPrivate)
-endif()
+kcoreaddons_add_plugin(kio_fonts SOURCES ${kio_fonts_PART_SRCS} ${KFI_FONTINST_AUTH_SRC} INSTALL_NAMESPACE "kf6/kio")
+target_link_libraries(kio_fonts Qt::DBus Qt::Xml KF6::Archive KF6::KIOCore KF6::KIOWidgets kfontinst Qt::GuiPrivate)
 
 install( FILES fonts.desktop  DESTINATION  ${KDE_INSTALL_DATADIR}/konqsidebartng/virtual_folders/services )
 ecm_install_icons( ICONS
