--- a/kcms/kfontinst/viewpart/CMakeLists.txt
+++ b/kcms/kfontinst/viewpart/CMakeLists.txt
@@ -10,6 +10,6 @@ add_library(kfontviewpart MODULE ${kfontviewpart_PART_SRCS})
 
 target_link_libraries(kfontviewpart KF6::Archive KF6::Parts KF6::XmlGui kfontinstui kfontinst )
 
-install(TARGETS kfontviewpart  DESTINATION ${KDE_INSTALL_PLUGINDIR}/kf${QT_MAJOR_VERSION}/parts )
+install(TARGETS kfontviewpart  DESTINATION ${KDE_INSTALL_PLUGINDIR}/kf6/parts )
 
 install( FILES kfontviewpart.rc DESTINATION  ${KDE_INSTALL_KXMLGUIDIR}/kfontview )
