--- a/kcms/fonts/autotests/CMakeLists.txt
+++ b/kcms/fonts/autotests/CMakeLists.txt
@@ -1,6 +1,7 @@
 # SPDX-License-Identifier: BSD-3-Clause
 # SPDX-FileCopyrightText: 2022 Harald Sitter <sitter@kde.org>
 
+find_package(Qt6 ${QT_MIN_VERSION} CONFIG REQUIRED COMPONENTS Test)
 
 remove_definitions(-DQT_NO_CAST_FROM_ASCII)
 
