applets/kicker,kcm/fonts,lookandfeel: Guard adding autotest subdirectory with BUILD_TESTING
Autotests subdir was being added regardless of -DBUILD_TESTING.


(cherry picked from commit 10a77fcf5cdfc48153a51c8bf4ff931cebd6bff0)

--- a/applets/kicker/CMakeLists.txt
+++ b/applets/kicker/CMakeLists.txt
@@ -92,6 +92,8 @@ if (${HAVE_ICU})
     target_compile_definitions(kickerplugin PRIVATE "-DHAVE_ICU")
 endif()
 
-add_subdirectory(plugin/autotests)
+if (BUILD_TESTING)
+    add_subdirectory(plugin/autotests)
+endif()
 
 install(TARGETS kickerplugin DESTINATION ${KDE_INSTALL_QMLDIR}/org/kde/plasma/private/kicker)
