--- a/kcms/fonts/CMakeLists.txt
+++ b/kcms/fonts/CMakeLists.txt
@@ -50,4 +50,6 @@ add_custom_command(TARGET kcm_fonts POST_BUILD
 
 install( FILES ${CMAKE_CURRENT_BINARY_DIR}/kcm_fonts_init.so DESTINATION ${KDE_INSTALL_PLUGINDIR}/plasma/kcminit)
 
-add_subdirectory(autotests)
+if (BUILD_TESTING)
+   add_subdirectory(autotests)
+endif()
