Drop build dependency on WaylandProtocols after Qt 6.6.0
The xdg-shell integration plugin is a temporary fork and the only
consumer of WaylandProtocols (tests not included). It will be no
longer needed in Qt 6.6.0.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -173,12 +173,6 @@ endif()
 find_package(Qt${QT_MAJOR_VERSION}WaylandClient COMPONENTS Private)
 find_package(PlasmaWaylandProtocols 1.6 REQUIRED)
 find_package(Wayland REQUIRED COMPONENTS Client Server) # Server is used in autotests
-find_package(WaylandProtocols 1.31)
-set_package_properties(WaylandProtocols PROPERTIES
-    TYPE REQUIRED
-    PURPOSE "Collection of Wayland protocols that add functionality not available in the Wayland core protocol"
-    URL "https://gitlab.freedesktop.org/wayland/wayland-protocols/"
-)
 
 if(FONTCONFIG_FOUND)
   # kfontinst
@@ -403,6 +397,7 @@ add_subdirectory(phonon)
 add_subdirectory(interactiveconsole)
 
 if(Qt6WaylandClient_VERSION VERSION_LESS "6.6.0")
+    find_package(WaylandProtocols 1.31 REQUIRED)
     add_subdirectory(qtwayland-integration)
 endif()
 
