kcms/notifications: Move per-event config into main page
Configure the notification events inline in the notifications
settings of every application, instead of an external dialog
provided by KNotifyConfig.

This adds a direct dependency to libcanberra, to play the
notification sound previews, but it was already indirectly
dependent via KNotifyConfig. It also drops Phonon support
for sound previews

To correctly implement the expected KCM behaviors for events
(saving, restoring and defaults), the EventData struct is
replaced with a more handy KConfigXT EventSettings object.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,6 +104,11 @@ set_package_properties(Phonon4Qt6 PROPERTIES
    DESCRIPTION "Qt-based audio library"
    TYPE REQUIRED)
 
+find_package(Canberra)
+set_package_properties(Canberra PROPERTIES
+    PURPOSE "Needed to preview notification sounds"
+    TYPE REQUIRED)
+
 find_package(Breeze ${PROJECT_VERSION} CONFIG)
 set_package_properties(Breeze PROPERTIES
                        TYPE OPTIONAL
