runners/services: Do not match categories for short queries
Otherwise, one can get unexpected results for substring-matches.
Apart from the matches not being relevant, this is confusing, because the category is not visible to the user

BUG: 469769

--- a/runners/services/autotests/fixtures/org.kde.yakuake.desktop
+++ b/runners/services/autotests/fixtures/org.kde.yakuake.desktop
@@ -5,7 +5,7 @@ Exec=yakuake
 Icon=yakuake
 Type=Application
 Terminal=false
-Categories=Qt;KDE;System;TerminalEmulator;
+Categories=Qt;KDE;System;TerminalEmulator;DummyCategory;
 Comment=A drop-down terminal emulator based on KDE Konsole technology.
 X-DBUS-StartupType=Unique
 X-KDE-StartupNotify=false
