shell: fix feedback intergation
the target name wasn't updated everywhere resulting in the feedback
support never getting enabled :(

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -61,7 +61,7 @@ Dependencies:
     'plasma/plasma-nano': '@same'
     'plasma/plasma5support': '@same'
     'libraries/plasma-wayland-protocols': '@latest-kf6'
-    'libraries/kuserfeedback': '@stable'
+    'libraries/kuserfeedback': '@latest-kf6'
     'graphics/libkexiv2': '@latest-kf6'
     'third-party/appstream': '@latest'
     'third-party/wayland': '@latest'
