--- a/dataengines/weather/ions/bbcukmet/CMakeLists.txt
+++ b/dataengines/weather/ions/bbcukmet/CMakeLists.txt
@@ -5,13 +5,13 @@ ecm_qt_declare_logging_category(ion_bbcukmet_SRCS
     CATEGORY_NAME kde.dataengine.ion.bbcukmet
     DEFAULT_SEVERITY Info
 )
-add_library(ion_bbcukmet MODULE ${ion_bbcukmet_SRCS})
-target_link_libraries (ion_bbcukmet
+add_library(plasma_engine_ion_bbcukmet MODULE ${ion_bbcukmet_SRCS})
+target_link_libraries (plasma_engine_ion_bbcukmet
     weather_ion
     KF6::KIOCore
     KF6::UnitConversion
     KF6::I18n
 )
 
-install (TARGETS ion_bbcukmet DESTINATION ${KDE_INSTALL_PLUGINDIR}/plasma5support/dataengine)
+install (TARGETS plasma_engine_ion_bbcukmet DESTINATION ${KDE_INSTALL_PLUGINDIR}/plasma5support/dataengine)
 
