--- a/dataengines/weather/ions/wetter.com/CMakeLists.txt
+++ b/dataengines/weather/ions/wetter.com/CMakeLists.txt
@@ -5,13 +5,13 @@ ecm_qt_declare_logging_category(ion_wettercom_SRCS
     CATEGORY_NAME kde.dataengine.ion.wettercom
     DEFAULT_SEVERITY Info
 )
-add_library(ion_wettercom MODULE ${ion_wettercom_SRCS})
-target_link_libraries(ion_wettercom
+add_library(plasma_engine_ion_wettercom MODULE ${ion_wettercom_SRCS})
+target_link_libraries(plasma_engine_ion_wettercom
     weather_ion
     KF6::KIOCore
     KF6::UnitConversion
     KF6::I18n
 )
 
-install(TARGETS ion_wettercom DESTINATION ${KDE_INSTALL_PLUGINDIR}/plasma5support/dataengine)
+install(TARGETS plasma_engine_ion_wettercom DESTINATION ${KDE_INSTALL_PLUGINDIR}/plasma5support/dataengine)
 
